tests/ui/parser/issues/issue-110014.stderr
error: unknown start of token: `
  --> $DIR/issue-110014.rs:1:3
   |
LL | fn`2222222222222222222222222222222222222222() {}
   |   ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - fn`2222222222222222222222222222222222222222() {}
LL + fn'2222222222222222222222222222222222222222() {}
   |

error: expected identifier, found `2222222222222222222222222222222222222222`
  --> $DIR/issue-110014.rs:1:4
   |
LL | fn`2222222222222222222222222222222222222222() {}
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected identifier

error: aborting due to 2 previous errors

