tests/ui/parser/issues/issue-110014.rs
fn`2222222222222222222222222222222222222222() {}
//~^ ERROR unknown start of token: `
//~^^ ERROR expected identifier, found `2222222222222222222222222222222222222222`
